[package]
name = "enc_password"
version = "0.1.1"
authors = ["Karl Brightman <karl@karlbright.org>"]
description = "Simple rust implementation of enc_password format and creation used by Instagram"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
aes-gcm = "0.8.0"
sodiumoxide = "0.2.6"
